<resources>
    <string name="app_name">Fruta Golosa</string>
    <string name="comp1">Logo</string>
    <string name="logo">comp1</string>
    <string name="comp2">comp2</string>
    <string name="btn1">btn1</string>
    <string name="telefono">telefono</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btna">Button</string>
    <string name="btnb">Button2</string>
    <string name="btn2" />
    <string name="btn3" />
    <string name="btn4" />
    <string name="btn5" />
    <string name="btn6" />
    <string name="btn7" />
    <string name="btn8" />
    <string name="ConChocolate">Con Chocolate</string>
    <string name="con_chocolate">Con Chocolate</string>
    <string name="frutas_y_flores">Frutas y Flores</string>
    <string name="sin_chocolate">Sin Chocolate</string>
    <string name="cajas_con_frutas">Cajas con frutas</string>
    <string name="mugs_mania">Mugs Mania</string>
    <string name="pasos_para_comprar">Pasos para comprar</string>
    <string name="contacto">Contacto</string>
    <string name="pasos">Pasos</string>
    <string name="compra">Compra</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Celular">Celular</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="checkbox1">CheckBox</string>
    <string name="inicie_sesi_n_o_registrese_para_acceder_a_nuestros_productos">Inicie sesión o registrese para acceder a nuestros productos</string>
    <string name="recu_rdame">Recuérdame</string>
    <string name="Recuérdame">Recuérdame</string>
    <string name="Iniciarsesión">Iniciar sesión</string>
    <string name="Cajatexto">Cajatexto</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Ingresar">Button</string>
    <string name="Registrarse">Registrarse</string>
    <string name="celulara">Celular</string>
    <string name="ingresara">Ingresar</string>
    <string name="registrarsea">Registrarse</string>
    <string name="Apellido">Apellido</string>
    <string name="registrod">Registro</string>
    <string name="Nomb">Nombre</string>
    <string name="nombretxt">Nombre</string>
    <string name="apellidotxt">Apellido</string>
    <string name="correotxt">Correo</string>
    <string name="celulartxt">Celular</string>
    <string name="contrasetxt">Contraseña</string>
    <string name="ingre_dat">Ingrese sus datos aqui para registarse</string>
    <string name="sehaenviado">Se ha enviado un codigo de verificacion al número ingresado coloquelo en el cuadro de abajo para validar</string>
    <string name="ErrorCod">TextView</string>
    <string name="enviarCod">Enviar</string>
    <string name="CuentaReg">TextView</string>
    <string name="SolicitaOtroCodBtn">Solicitar otro código</string>
    <string name="Comp1a">Cajatexto</string>
    <string name="Nombrecomp">Nombrecompra</string>
    <string name="PrecioComp">PrecioCompra</string>
    <string name="env_o">Envío</string>
    <string name="flechade"><![CDATA[>]]></string>
    <string name="Felchaizq"><![CDATA[<]]></string>
    <string name="comprarbtn">Comprar</string>
    <string name="cantidad">1</string>
    <string name="radiobutton">RadioButton</string>
    <string name="limpiar">Limpiar</string>
    <string name="globo">Globo</string>
    <string name="envio">Envio</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="nombre_de_quien_recibe">Nombre de quien recibe</string>
    <string name="tel_fono_de_quien_recibe">Teléfono de quien recibe</string>
    <string name="d_a_de_entrega">Día de entrega</string>
    <string name="establecer_direcci_n">Establecer Dirección</string>
    <string name="hora_de_entrega">Hora de entrega</string>
    <string name="title_activity_maps">Map</string>
    <string name="buscar">Buscar</string>
    <string name="button">Button</string>
    <string name="referencia">Referencia</string>
    <string name="textview">TextView</string>
    <string name="n_2mero">Número</string>
    <string name="calle_principal">Calle Principal</string>
    <string name="calle_principaled">Calle Principal</string>
    <string name="calle_secundariaedt">Calle Secundaria</string>
    <string name="aceptar">Aceptar</string>
    <string name="calle_secundaria">Calle Secundaria</string>
    <string name="referencia2">Referencia</string>
    <string name="n_mero">Número</string>
    <string name="enviar">Enviart</string>
    <string name="buscarm">Buscar</string>
    <string name="motivoc">Motivo</string>
    <string name="cumplea_os">Cumpleaños</string>
    <string name="amor_y_amistad">Amor y Amistad</string>
    <string name="portada">Portada</string>
    <string name="texto_en_tarjeta">Texto en Tarjeta</string>
    <string name="aceptars">Aceptar</string>
    <string name="nombre_">Nombre:</string>
    <string name="tel_fono_">Teléfono:</string>
    <string name="borrar_pedido">Borrar Pedido</string>
    <string name="direcci_n_">Dirección:</string>
    <string name="motivo_">Motivo</string>
    <string name="fecha_">Fecha</string>
    <string name="hora_">Hora:</string>
    <string name="costo_">Costo:</string>
    <string name="descripci_n_de_su_pedido">Descripción de su pedido</string>
    <string name="nombreed">NombreED</string>
    <string name="telefonoed">TelefonoED</string>
    <string name="con_tarjeta">Con Tarjeta</string>
    <string name="con_transferencia">Con transferencia</string>
    <string name="texto">Texto</string>
    <string name="motivoed">MotivoED</string>
    <string name="textoed">TextoED</string>
    <string name="direccioned">DireccionED</string>
    <string name="fechaed">FechaED</string>
    <string name="horaed">HoraED</string>
    <string name="costoed">CostoED</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pedido_pendientex">Pedido Pendiente</string>
    <string name="pague_con_su_tarjeta_de_cr_dito_internacional_a_trav_s_de_paypal">Pague con su tarjeta de crédito internacional, a través de PayPal</string>
    <string name="avance_de_pruebaa">Avance De Prueba</string>
    <string name="con_chocolatea">Con Chocolate</string>
    <string name="sin_chocolatse">Sin Chocolate</string>
    <string name="frutas_y_floresa">Frutas y Flores</string>
    <string name="rosas_eternizadas">Rosas Eternizadas</string>
    <string name="cajas_con_frutasa">Cajas Con Frutas</string>
    <string name="mugs_maniaa">Mugs Mania</string>
    <string name="pasos_para_comprara">Pasos para Comprar</string>
    <string name="nuestro_contactoa">Nuestro Contacto</string>
    <string name="ingresarbtn1">Ingresar</string>
    <string name="nombretxtreg">Nombre</string>
    <string name="enviarReg">Enviar</string>
    <string name="realizar_otro_">Realizar otro pedido</string>
    <string name="agregue_detalles1">Agregue detalles</string>
    <string name="mas_info1">Mas Info</string>
    <string name="mas_info2">Mas Info</string>
    <string name="mas_info3">Mas Info</string>
    <string name="mas_info4">Mas Info</string>
    <string name="calle_principals">Calle principal</string>
    <string name="calle_secundarias">Calle Secundaria</string>
    <string name="agregue_un_detalle_de_ubicacion_opcionasl">Agregue un detalle de ubicacion(Opcional)</string>
    <string name="globo_y_tarjetas">Globo y Tarjeta</string>
    <string name="algun_detalle_que_quiera_agregar_opcionals">Algun detalle que quiera agregar (opcional)</string>
    <string name="referencias">Referencia</string>
    <string name="logos">logo</string>
    <string name="mas_informacions">Mas informacion</string>
    <string name="pagar">Pagar</string>
    <string name="metodos_de_pago">Metodos de pago</string>
    <string name="quito">QUITO</string>
    <string name="guayaquil">Guayaquil</string>
    <string name="guayaquilS">GUAYAQUIL</string>
    <string name="pagar_con_tarjeta_de_credito_a_traves_de_paypal">Pagar con tarjeta de credito a traves de Paypal</string>
    <string name="pagar_por_transferencia_bancaria">Pagar Por transferencia Bancaria</string>
    <string name="seleccione_uno_de_los_bancos_dejado_aparecera_los_datos_de_cuenta_por_favor_ingrese_el_codigo_de_la_string_con_transferencia">Seleccione uno de los bancos, dejado aparecera los datos de cuenta, por favor ingrese el codigo de la @string/con_transferencia</string>
    <string name="juan_ramos">Juan Ramos</string>
    <string name="pulse_uno_de_los_bancos_pra_ver_la_cuenta">Pulse uno de los bancos pra ver la cuenta</string>
    <string name="_1718919200">1718919200</string>
    <string name="ingrese_el_codio_de_la_transferencia_aqui">Ingrese el codio de la transferencia aqui</string>
    <string name="seleccione_un_banco_para_ver_datos_transferencia_directa_cuentas_de_ahporro">Seleccione un banco para ver datos, transferencia directa, cuentas de ahorro</string>
    <string name="codigo_de_transferencia_aquis">Codigo de transferencia aqui</string>
    <string name="seleccione_un_bancosa">Seleccione un banco</string>
    <string name="_1718919200s">1718919200</string>
    <string name="juan_ramoss">Juan Ramos</string>
    <string name="enviarsss">Enviar</string>
    <string name="correot">Correo</string>
    <string name="estado_del_pedido">Estado del pedido</string>
    <string name="en_fabricacion">EN FABRICACION</string>
    <string name="marcar_como_recibido">Marcar como recibido</string>
    <string name="nombre_arreglo">Nombre Arreglo</string>
    <string name="costo_final">Costo Final</string>
    <string name="sectorb">sectorb</string>
    <string name="arregloae">arregloae</string>
    <string name="casaa">casaa</string>
    <string name="telefonoa">telefonoa</string>
    <string name="correoclien">correoclien</string>
    <string name="motorizadob">motorizadob</string>
    <string name="parroquiab">parroquiab</string>
    <string name="keyaccount">keyaccount</string>
    <string name="cosoto_enviob">cosoto_enviob</string>
    <string name="regalo">regalo</string>
    <string name="disenador">disenador</string>
    <string name="cd">cd</string>
    <string name="numeraciob">numeraciob</string>
    <string name="globol">globo</string>
    <string name="coordenadas">coordenadas</string>
    <string name="referencial">referencia</string>
    <string name="portada_tarjet">portada tarjet</string>
    <string name="secundara">secundara</string>
    <string name="principala">principala</string>
    <string name="nombrepidea">nombrepidea</string>
    <string name="tarjetaa">tarjetaa</string>
    <string name="fechaped">fechaped</string>
    <string name="recibe">recibe</string>
    <string name="horaa">horaa</string>
    <string name="telfcli">telfcli</string>
    <string name="especificaa">especificaa</string>
    <string name="fecheentregaaa">fecheentregaaa</string>
</resources>