<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@color/rt">    <ImageView        android:id="@+id/ImgArreglo"        android:layout_width="0dp"        android:layout_height="163dp"        android:layout_marginStart="170dp"        android:scaleType="fitXY"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.919"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:srcCompat="@drawable/frutagolosa" />    <ImageView        android:id="@+id/imgestado"        android:layout_width="0dp"        android:layout_height="39dp"        android:layout_marginTop="8dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.533"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/ImgArreglo"        app:srcCompat="@drawable/semaforo" />    <TextView        android:id="@+id/Fecha_entTxt"        android:layout_width="0dp"        android:layout_height="38dp"        android:layout_marginStart="2dp"        android:layout_marginEnd="8dp"        android:fontFamily="@font/roboto_condensed_bold"        android:gravity="center_vertical"        android:text="@string/fecheentregaaa"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintEnd_toStartOf="@+id/ImgArreglo"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/Arreglotxt" />    <TextView        android:id="@+id/SectorTxt"        android:layout_width="0dp"        android:layout_height="34dp"        android:layout_marginStart="2dp"        android:layout_marginLeft="2dp"        android:layout_marginTop="112dp"        android:layout_marginEnd="15dp"        android:layout_marginRight="15dp"        android:gravity="center_vertical"        android:text="@string/sectorb"        android:textSize="18sp"        android:textStyle="bold"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/NombreCliente"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/FranajaHorariaTxt"        android:layout_width="0dp"        android:layout_height="34dp"        android:layout_marginStart="2dp"        android:fontFamily="@font/roboto_condensed_bold"        android:gravity="center_vertical"        android:text="@string/horaa"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintEnd_toStartOf="@+id/ImgArreglo"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/QuienRcibe" />    <TextView        android:id="@+id/IDPEDIDOTXT"        android:layout_width="0dp"        android:layout_height="34dp"        android:layout_marginStart="2dp"        android:layout_marginLeft="2dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:gravity="center_vertical"        android:text="idped"        android:textAlignment="center"        android:textSize="18sp"        android:textStyle="bold"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="1.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/referenciatxt" />    <TextView        android:id="@+id/QuienRcibe"        android:layout_width="0dp"        android:layout_height="34dp"        android:layout_marginStart="2dp"        android:layout_marginEnd="2dp"        android:fontFamily="@font/roboto_condensed_bold"        android:gravity="center_vertical"        android:text="@string/recibe"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintEnd_toStartOf="@+id/ImgArreglo"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/Fecha_entTxt" />    <TextView        android:id="@+id/TelefonoQrecibe"        android:layout_width="0dp"        android:layout_height="38dp"        android:layout_marginStart="16dp"        android:layout_marginLeft="16dp"        android:layout_marginTop="32dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:gravity="center_vertical"        android:text="@string/telefonoa"        android:textSize="18sp"        android:textStyle="bold"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="1.0"        app:layout_constraintStart_toEndOf="@+id/Fecha_Pedido"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/Arreglotxt"        android:layout_width="0dp"        android:layout_height="34dp"        android:layout_marginStart="2dp"        android:layout_marginEnd="8dp"        android:fontFamily="@font/roboto_condensed_bold"        android:gravity="center_vertical"        android:text="@string/arregloae"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintEnd_toStartOf="@+id/ImgArreglo"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        tools:text="NombreArreglo" />    <TextView        android:id="@+id/TelfClienteTxt"        android:layout_width="0dp"        android:layout_height="38dp"        android:layout_marginStart="15dp"        android:layout_marginLeft="15dp"        android:layout_marginTop="36dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:gravity="center_vertical"        android:text="@string/telfcli"        android:textSize="18sp"        android:textStyle="bold"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toEndOf="@+id/Fecha_Pedido"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/Fecha_Pedido"        android:layout_width="0dp"        android:layout_height="34dp"        android:layout_marginEnd="15dp"        android:gravity="center_vertical"        android:text="@string/fechaped"        android:textSize="18sp"        android:textStyle="bold|italic"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/NombreCliente"        app:layout_constraintHorizontal_chainStyle="packed"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/NombreCliente"        android:layout_width="0dp"        android:layout_height="38dp"        android:layout_marginStart="2dp"        android:layout_marginEnd="8dp"        android:gravity="center_vertical"        android:text="@string/nombrepidea"        android:textSize="18sp"        android:textStyle="bold|italic"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/ImgArreglo"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/Arreglotxt" />    <TextView        android:id="@+id/correoclientetxt"        android:layout_width="0dp"        android:layout_height="18dp"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/correoclien"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/numeracionTxt"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/FranajaHorariaTxt" />    <TextView        android:id="@+id/calle_printxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/principala"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/disenadortxt"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/correoclientetxt" />    <TextView        android:id="@+id/calle_sectxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/secundara"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/motorizadotxt"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/calle_printxt" />    <TextView        android:id="@+id/casaempresaedificiotxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/casaa"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/estadotxt"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/calle_sectxt" />    <TextView        android:id="@+id/portada_tarjetatxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/portada_tarjet"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/keyaccounttxt"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/casaempresaedificiotxt" />    <TextView        android:id="@+id/texto_tarjetatxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/tarjetaa"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/parroquia_txt"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/portada_tarjetatxt" />    <TextView        android:id="@+id/especificaciontxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/especificaa"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/costo_enviotxt"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/texto_tarjetatxt" />    <TextView        android:id="@+id/numeracionTxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="12dp"        android:layout_marginRight="12dp"        android:text="@string/numeraciob"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/FranajaHorariaTxt" />    <TextView        android:id="@+id/disenadortxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/disenador"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/numeracionTxt" />    <TextView        android:id="@+id/motorizadotxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/motorizadob"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/disenadortxt" />    <TextView        android:id="@+id/estadotxt"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginStart="2dp"        android:layout_marginEnd="8dp"        android:fontFamily="@font/roboto_condensed_bold"        android:text="Estado:"        android:textColor="@color/colorAccent"        android:textSize="18sp"        android:textStyle="bold"        app:layout_constraintEnd_toStartOf="@+id/ImgArreglo"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/FranajaHorariaTxt" />    <TextView        android:id="@+id/keyaccounttxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/keyaccount"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/estadotxt" />    <TextView        android:id="@+id/parroquia_txt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/parroquiab"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/keyaccounttxt" />    <TextView        android:id="@+id/costo_enviotxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/cosoto_enviob"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/parroquia_txt" />    <TextView        android:id="@+id/regalotxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/regalo"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/coordenadastxt"        app:layout_constraintTop_toBottomOf="@+id/costo_enviotxt" />    <TextView        android:id="@+id/cdtxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/cd"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/globotxt"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/especificaciontxt" />    <TextView        android:id="@+id/globotxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/globol"        android:visibility="gone"        app:layout_constraintEnd_toStartOf="@+id/regalotxt"        app:layout_constraintTop_toBottomOf="@+id/especificaciontxt" />    <TextView        android:id="@+id/coordenadastxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/coordenadas"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/costo_enviotxt" />    <TextView        android:id="@+id/referenciatxt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="@string/referencial"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/globotxt" />    <TextView        android:id="@+id/TiempoFab"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="8dp"        android:layout_marginRight="8dp"        android:text="TiempoFab"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/globotxt" />    <TextView        android:id="@+id/txtArreglolisto"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:text="@string/textview"        android:visibility="gone"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/FranajaHorariaTxt" />    <TextView        android:id="@+id/textView10"        android:layout_width="0dp"        android:layout_height="27dp"        android:layout_marginTop="-20dp"        android:background="@android:color/background_light"        android:fontFamily="@font/roboto_condensed_bold"        android:text="VER DETALLES"        android:textAlignment="center"        android:textColor="@color/colorAccent"        android:textSize="18sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/imgestado" /></androidx.constraintlayout.widget.ConstraintLayout>